--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
+    "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@typescript-eslint/parser": "^8.46.4",
     "eslint": "^9.39.1",
@@ -19,6 +20,8 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "rimraf": "^6.1.0"
+    "@modelcontextprotocol/sdk": "^1.22.0",
+    "rimraf": "^6.1.0",
+    "zod": "^4.1.12"
   }
 }
