feat: Implement SCE MCP server with symbol extraction, validation, and suggestion tools
- Added `sce-mcp-server.ts` to implement the Model Context Protocol (MCP) server for SCE functionality.
- Registered tools for extracting symbols, validating ontology, and suggesting symbols based on input text.
- Introduced flexible output formatting options (auto, pretty, json, hybrid) with ANSI color support.
- Created helper functions for rendering output and handling tool invocations.
- Added tests for server functionality, including format resolution, color usage, symbol rendering, and tool handling.
- Updated TypeScript ESLint configuration to exclude distribution files.
- Downgraded `zod` dependency to version 3.25.76 for compatibility.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "pnpm -w -r --filter ./packages/**/ts test",
     "lint": "pnpm -w -r --filter ./packages/**/ts lint",
     "clean:build": "pnpm -w -r --filter ./packages/**/ts exec -- rimraf dist .tsbuildinfo",
-    "build:force": "pnpm -w -r --filter ./packages/**/ts exec -- tsc -b --force"
+    "build:force": "pnpm -w -r --filter ./packages/**/ts exec -- tsc -b --force",
+    "docs": "mkdocs serve"
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
@@ -22,6 +23,6 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.22.0",
     "rimraf": "^6.1.0",
-    "zod": "^4.1.12"
+    "zod": "3.25.76"
   }
 }
