feat: Enhance CI workflow, add logging utility, and update package dependencies

--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.22.0",
-    "rimraf": "^6.1.0",
-    "zod": "3.25.76"
+    "rimraf": "^6.1.0"
   }
 }
