--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,4 +36,4 @@ jobs:
         run: pnpm build
 
       - name: Run Jest tests with coverage
-        run: pnpm test -- --coverage
+        run: pnpm test:cover
