--- a/packages/core/ts/package.json
+++ b/packages/core/ts/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "build": "tsc -b",
     "lint": "eslint --config ./eslint.config.cjs",
-    "test": "jest --config ./jest.config.cjs"
+    "test": "jest --config ./jest.config.cjs",
+    "test:cover": "jest --coverage --config ./jest.config.cjs"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.22.0",
