--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ nav:
   - Contributing & Governance:
       - Contributing: CONTRIBUTING.md
       - Governance: GOVERNANCE.md
+      - Releases: RELEASING.md
   - Roadmap: ROADMAP.md
 
 markdown_extensions:
