--- a/packages/core/ts/package.json
+++ b/packages/core/ts/package.json
@@ -23,5 +23,9 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.22.0",
     "zod": "3.25.76"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SemanticControlEncoding/sce.git"
   }
 }
