feat: Implement SCE MCP server with symbol extraction, validation, and suggestion tools
- Added `sce-mcp-server.ts` for Model Context Protocol (MCP) server functionality.
- Implemented tools for extracting and explaining SCE symbols, validating ontology, and suggesting symbols based on input text.
- Introduced flexible output formatting options (auto, pretty, json, hybrid) with ANSI color support.
- Created tests for server helpers, including format resolution, color usage, and tool handling.
- Added TypeScript configuration files for ESLint and Jest.
- Updated pnpm lockfile to include necessary dependencies.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 site_name: Semantic Communication Encoding (SCE)
 site_description: "A small, governed emoji ontology for humans, tools, and LLMs."
-site_url: https://github.com/SemanticControlEncoding/sce
-repo_name: SemanticControlEncoding/sce
-repo_url: https://github.com/SemanticControlEncoding/sce
+site_url: https://github.com/SemanticEncoding/sce
+repo_name: SemanticEncoding/sce
+repo_url: https://github.com/SemanticEncoding/sce
 
 theme:
   name: material
@@ -51,5 +51,5 @@ markdown_extensions:
 extra:
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/SemanticControlEncoding/sce
+      link: https://github.com/SemanticEncoding/sce
       name: SCE on GitHub
