--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@sce/core",
+  "name": "@semanticencoding/monorepo",
+  "private": true,
   "version": "0.0.1",
-  "private": "false",
   "description": "An open semantic layer enabling LLM-native communication protocols",
   "scripts": {
     "build": "tsc -b",
     "test": "pnpm -w -r --filter ./packages/**/ts test",
     "test:cover": "pnpm -w -r --filter ./packages/**/ts test:cover",
     "lint": "pnpm -w -r --filter ./packages/**/ts lint",
-    "publish": "pnpm -w -r --filter ./packages/**/ts publish --access public",
+    "publish:all": "pnpm -r --filter ./packages/**/ts publish --access public",
     "clean:build": "pnpm -w -r --filter ./packages/**/ts exec -- rimraf dist .tsbuildinfo",
     "build:force": "pnpm -w -r --filter ./packages/**/ts exec -- tsc -b --force",
     "docs": "mkdocs serve"
@@ -20,16 +20,15 @@
     "@typescript-eslint/parser": "^8.46.4",
     "eslint": "^9.39.1",
     "jest": "^29.6.1",
+    "rimraf": "^6.1.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.9.3"
   },
-  "dependencies": {
-    "rimraf": "^6.1.0"
-  },
+  "dependencies": {},
   "license": "EthicalUse-1.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SemanticControlEncoding/sce.git"
+    "url": "git+https://github.com/SemanticEncoding/sce.git"
   }
 }
