--- a/packages/semanticencoding/ts/package.json
+++ b/packages/semanticencoding/ts/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "@semanticencoding/core",
+  "name": "semanticencoding",
   "version": "0.0.1",
   "type": "module",
   "engines": {
     "node": ">=24.0.0"
   },
-  "description": "An open semantic layer enabling LLM-native communication protocols - core types and implementation",
+  "description": "An open semantic layer enabling LLM-native communication protocols",
+  "bin": {
+    "sce": "dist/cli.js",
+    "mcp": "dist/sce-mcp-server.js"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "EthicalUse-1.0",
@@ -22,7 +26,11 @@
     "test": "jest --config ./jest.config.cjs",
     "test:cover": "jest --coverage --config ./jest.config.cjs"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@semanticencoding/core": "workspace:*",
+    "@modelcontextprotocol/sdk": "^1.22.0",
+    "zod": "3.25.76"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SemanticEncoding/sce.git"
