--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "description": "An open semantic layer enabling LLM-native communication protocols",
   "scripts": {
     "build": "tsc -b",
+    "copy-shared": "node ./scripts/copy-shared-to-packages.js",
     "test": "pnpm -w -r --filter ./packages/**/ts test",
     "test:cover": "pnpm -w -r --filter ./packages/**/ts test:cover",
     "lint": "pnpm -w -r --filter ./packages/**/ts lint",
     "publish:all": "pnpm -r --filter ./packages/**/ts publish --access public",
+    "pack:dry": "pnpm -r pack --json",
     "clean:build": "pnpm -w -r --filter ./packages/**/ts exec -- rimraf dist .tsbuildinfo",
     "build:force": "pnpm -w -r --filter ./packages/**/ts exec -- tsc -b --force",
     "docs": "mkdocs serve"
