--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "docs": "mkdocs serve"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.7",
     "@types/jest": "^29.5.3",
     "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
@@ -27,7 +28,6 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.9.3"
   },
-  "dependencies": {},
   "license": "EthicalUse-1.0",
   "repository": {
     "type": "git",
