Enhance MCP documentation and CLI reference; improve token efficiency and clarity in prompting
- Updated MCP.md to clarify the role of the MCP server and its tools, including detailed examples and output formatting.
- Revised index.md to emphasize the benefits of using SCE's governed vocabulary for semantic communication.
- Improved eslint configuration to exclude additional directories and files.
- Added CLI.md for comprehensive command-line interface usage, including installation, commands, and common workflows.
- Introduced PROMPTING.md to guide users on effective prompting with SCE symbols, showcasing token efficiency and clarity benefits.
- Updated package.json descriptions and added CHANGELOG.md to core and semanticencoding packages.
- Enhanced TypeScript configurations to exclude coverage and test directories.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,15 +19,19 @@ theme:
     - scheme: slate
       primary: indigo
       accent: deep purple
-  extra_css:
-    - overrides/extra.css
+
+extra_css:
+  - overrides/extra.css
 
 nav:
   - Home: index.md
   - Getting started: GETTING-STARTED.md
+  - Prompting Guide: PROMPTING.md
+  - Usage:
+      - CLI Reference: CLI.md
+      - MCP Integration: MCP.md
+      - Ontology & API: ONTOLOGY-API.md
   - Specification: SPEC.md
-  - Ontology & API: ONTOLOGY-API.md
-  - MCP Integration: MCP.md
   - Contributing & Governance:
       - Contributing: CONTRIBUTING.md
       - Governance: GOVERNANCE.md
