--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ coverage/
 node_modules/
 node_modules
 
-# README for published package inclusion
+# Temporary files created during packaging
 packages/core/ts/README.md
 packages/semanticencoding/ts/README.md
+packages/*/ts/*.tgz
+./*.tgz
