--- a/packages/semanticencoding/ts/tsconfig.json
+++ b/packages/semanticencoding/ts/tsconfig.json
@@ -22,6 +22,8 @@
         "tests/**/*"
     ],
     "exclude": [
+        "coverage/",
+        "coverage/**/*",
         "dist/**/*",
         "node_modules",
         "**/*.test.ts"
